2010-06-09

	* src/action.c: prevent double free when using %f.
	  Obtain thread lock in gdk_input_add() callbacks.

2010-06-07

	* libsylph/prefs_common.[ch]
	  src/addr_compl.c
	  src/prefs_common_dialog.c: made the old behavior of address
	  completion configurable.

2010-06-05

	* src/addr_compl.c: replace_address_in_edit(): fixed infinite loop
	  on completion start with GTK+ 2.18+.

2010-06-04

	* src/addr_compl.c: implemented real automatic address completion.

2010-06-03

	* src/quick_search.c: suppress filter debug output.

2010-06-02

	* libsylph/filter.c: added debug log for filter.

2010-06-01

	* src/summaryview.c: modified 'Go to next folder' dialog description.

2010-05-31

	* src/plugin.[ch]
	  src/main.c: added some functions for FolderView.

2010-05-28

	* src/update_check.c: support DISP_RELEASE / DISP_DEVEL which
	  set displayed new version.

2010-05-28

	* src/update_check.[ch]
	  src/plugin.[ch]
	  src/main.c: added functions to modify URLs for update check.

2010-05-27

	* src/prefs_common_dialog.c: prefs_colorlabel_create(): added
	  description for the color label settings.

2010-05-25

	* src/mainwindow.c: help_command_line_show(): added Windows-only
	  --ipcport option.

2010-05-24

	* src/compose.c: compose_attach_open(): fixed compilation on win32.

2010-05-24

	* src/inc.c: fixed crash when clicking tray icon menu
	  'Get from current account' with no account.

2010-05-24

	* src/main.c: added --instance-id <ID> option, which allows users to
	  run multiple instances of Sylpheed. There is no extra checks for
	  config directory, so use with caution.

2010-05-21

	* libsylph/filter.c: filter_apply(): fixed a bug that MIME flag was
	  not set to filtered messages. This occurred to filtered sent
	  messages.

2010-05-21

	* src/prefs_common_dialog.c
	  src/prefs_filter_edit.c
	  src/prefs_account_dialog.c
	  src/editldap.c: removed warnings 'GtkSpinButton: setting an
	  adjustment with non-zero page size is deprecated'.