@@ -1,3 +1,7 @@
+2010-06-10
+
+	* src/folderview.[ch]: put vbox on the top of folder view.
+
 2010-06-09
 
 	* src/action.c: prevent double free when using %f.
